--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Cuprins - Cățeluși</title>
     <link rel="stylesheet" href="stil.css">
 </head>
+    <style>
+body {
+  background-image: url('imaginecatei.jpg');
+}
+</style>
 <body>
     <header>
         <h1>Cuprins - Cățeluși</h1>
